5-nat.tf
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/eip
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/nat_gateway

# Elastic IP for NAT Gateway
resource "aws_eip" "nat" {

  tags = {
    Name = "nat"
  }
}

# NAT Gateway
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_zone1.id

  tags = {
    Name = "nat"
  }

  depends_on = [aws_internet_gateway.igw]
}
